--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db:seed": "npx tsx lib/db/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
+    "db:reset": "npx tsx lib/db/reset.ts",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
