--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "chart.js": "^4.5.0",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
@@ -24,6 +25,7 @@
     "next": "15.0.4-canary.36",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-2d16326d-20240930",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
     "tailwindcss": "4.0.0-beta.4",
     "typescript": "^5.7.2",
